--- a/theme.css
+++ b/theme.css
@@ -847,6 +847,10 @@ hr {
   margin-bottom: 2px;
   border-radius: 5px;
 }
+.anp-full-rainbow-color-toggle .nav-folder.mod-root > .nav-folder-children > .nav-file {
+  background-color: rgba(var(--ctp-text), var(--anp-rainbow-folder-bg-opacity));
+  border-radius: 5px;
+}
 .anp-full-rainbow-color-toggle .nav-folder.mod-root > .nav-folder-children > .nav-folder:nth-child(11n+1) { --rainbow-folder-color: var(--ctp-mauve); }
 .anp-full-rainbow-color-toggle .nav-folder.mod-root > .nav-folder-children > .nav-folder:nth-child(11n+2) { --rainbow-folder-color: var(--ctp-red); }
 .anp-full-rainbow-color-toggle .nav-folder.mod-root > .nav-folder-children > .nav-folder:nth-child(11n+3) { --rainbow-folder-color: var(--ctp-maroon); }
@@ -884,15 +888,13 @@ body.anp-full-rainbow-color-toggle:not(.is-grabbing) .nav-folder.mod-root > .nav
 body.anp-full-rainbow-color-toggle:not(.is-grabbing) .nav-folder.mod-root > .nav-folder-children > .nav-file .nav-file-title:hover {
   background-color: rgba(var(--color-accent), 0.3);
 }
-.anp-full-rainbow-color-toggle .nav-folder.mod-root > .nav-folder-children > .nav-file.has-focus {
-  background-color: hsla(var(--color-accent-hsl), 0.43);
-  border-left: 6px solid var(--color-accent);
-  border-color: var(--color-accent);
-}
 .anp-full-rainbow-color-toggle.catppuccin-accent-toggle .nav-folder.mod-root > .nav-folder-children > .nav-file.has-focus {
-  background-color: rgba(var(--ctp-accent), 0.43);
-  border-left: 6px solid rgb(var(--ctp-accent));
+  background-color: rgba(var(--ctp-text), var(--anp-rainbow-folder-border-opacity));
+  border-left: none;
   border-color: rgb(var(--ctp-accent));
+}
+.anp-full-rainbow-color-toggle .workspace-leaf.mod-active .nav-folder.has-focus > .nav-folder-title:focus-within, .workspace-leaf.mod-active .nav-file.has-focus > .nav-file-title:focus-within {
+  box-shadow: none;
 }
 body.anp-full-rainbow-color-toggle:not(.is-grabbing) .nav-folder.mod-root > .nav-folder-children > .nav-folder .nav-file-title.is-active {
     background-color: rgba(var(--ctp-text), 0.2);
