--- a/theme.css
+++ b/theme.css
@@ -587,6 +587,7 @@ body {
   --anp-header-font: "Noto Serif";
 }
 /*--------FOLDER OVERHAULS------------*/
+/*-Custom folder title-*/
 .anp-custom-vault-toggle .nav-folder.mod-root > .nav-folder-title > .nav-folder-title-content {
   font-size: 130%;
   font-weight: bold;
@@ -615,22 +616,32 @@ body {
   margin: 0 auto;
 }
 /*---------------UI ELEMENTS---------------*/
+/*-Recolor copy code button-*/
 .markdown-rendered button.copy-code-button {
   background-color: rgb(var(--ctp-crust));
 }
+/*-0 Padding on frontmatter container-*/
+.frontmatter-container {
+  padding: 0;
+}
+/*-Disable scrollbars-*/
 .anp-toggle-scrollbars *::-webkit-scrollbar {
   display: none;
 }
+/*-Custom hr margins-*/
 hr {
   margin-block-start: 5px;
   margin-block-end: 5px;
 }
+/*-Blockquote spacing-*/
 .markdown-rendered blockquote {
   padding-left: 10px;
 }
+/*-Smoother popover transition-*/
 .popover.hover-popover.is-loaded {
   animation: fade .2s;
 }
+/*-Recolor table borders-*/
 .markdown-rendered table,
 .markdown-rendered td, .markdown-rendered th,
 .markdown-rendered thead tr > th:last-child,
@@ -639,23 +650,28 @@ hr {
     text-align: center;
     border: 2px solid var(--table-border-color);
 }
+/*-Recolor tooltips-*/
 .tooltip {
   color: rgb(var(--text));
 }
+/*-Disable tooltips-*/
 .anp-tooltip-toggle .tooltip {
   display: none;
 }
+/*-----------TEXT DECORATIONS-------------*/
+/*-Decorations for bold and italics-*/
 .anp-decoration-toggle {
   --italic-color: rgb(var(--ctp-green));
   --bold-color: rgb(var(--ctp-red));
 }
-/*-----------TEXT DECORATIONS-------------*/
+/*-Make it so that mark overwrites italic and bold colors-*/
 .markdown-rendered mark {
   --italic-color: rgb(var(--ctp-text));
   --bold-color: rgb(var(--ctp-text));
   border-radius: 4px;
   padding: 2px;
 }
+/*-No text decoration for links-*/
 .markdown-rendered .internal-link,
 .markdown-rendered .internal-link:hover,
 .markdown-rendered .internal-link:active,
@@ -663,11 +679,13 @@ hr {
 .markdown-rendered .internal-link.is-unresolved {
     text-decoration: none;
 }
+/*-Formatting recolors-*/
 .cm-s-obsidian span.cm-formatting-strong,
 .cm-s-obsidian span.cm-strong { color: var(--bold-color); }
 .cm-s-obsidian span.cm-formatting-em,
 .cm-s-obsidian span.cm-em { color: var(--italic-color); }
 /*--------------HEADERS----------------*/
+/*-Custom header font-*/
 .anp-header-toggle .markdown-reading-view {
   --h1-font: var(--anp-header-font);
   --h2-font: var(--anp-header-font);
@@ -676,6 +694,7 @@ hr {
   --h5-font: var(--anp-header-font);
   --h6-font: var(--anp-header-font);
 }
+/*-Custom header colors-*/
 .anp-header-toggle.anp-header-color-toggle {
   --h1-color: rgba(var(--ctp-red));
   --h2-color: rgba(var(--ctp-peach));
@@ -684,6 +703,7 @@ hr {
   --h5-color: rgba(var(--ctp-lavender));
   --h6-color: rgba(var(--ctp-mauve));
 }
+/*-Source editor recolor application-*/
 .cm-formatting-header-1 { color: var(--h1-color); }
 .cm-formatting-header-2 { color: var(--h2-color); }
 .cm-formatting-header-3 { color: var(--h3-color); }
@@ -699,6 +719,7 @@ hr {
     margin-block-start: var(--anp-header-margin-value);
     margin-block-end: var(--anp-header-margin-value);
 }
+/*-Do not affect calendar-*/
 #calendar-container h3 {
   font-family: var(--font-interface);
   font-weight: bold;
@@ -756,6 +777,7 @@ hr {
   margin-left: -35px;
   padding-right: 3px;
 }
+/*-Custom callout colors-*/
 .anp-callout-color-toggle .callout {
   --callout-color: var(--ctp-blue);
   --callout-icon: lucide-pencil;
@@ -903,7 +925,12 @@ body.anp-full-rainbow-color-toggle:not(.is-grabbing) .nav-folder.mod-root > .nav
 .anp-full-rainbow-color-toggle .workspace-leaf.mod-active .nav-folder.has-focus > .nav-folder-title, .workspace-leaf.mod-active .nav-file.has-focus > .nav-file-title {
   box-shadow: none;
 }
+.anp-full-rainbow-color-toggle .workspace-leaf.mod-active .nav-file.has-focus > .nav-file-title,
+.anp-full-rainbow-color-toggle .workspace-leaf.mod-active .nav-file > .nav-file-title {
+  margin-bottom: 0;
+}
 /*------------------DATAVIEW------------------*/
+/*-Fix dataview table header size-*/
 .table-view-table > thead > tr > th {
   font-size: medium;
 }
